--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
 <body>
 
+  <audio class="song" loop autoplay>
+    <source src="./music/Sugar.mp4">
+    </source>
+    Your browser isn't invited for super fun audio time.
+</audio>
+
   <div class="container">
     <div class="one">
       <h1 class="one">
