--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script type="application/javascript" src="script/main.js"></script>
+
 </head>
 
 <body>
 
-  <audio class="song" loop autoplay>
+  <audio class="song" loop>
     <source src="./music/Sugar.mp4">
     </source>
     Your browser isn't invited for super fun audio time.
@@ -133,10 +137,5 @@
     </div>
   </div>
 </body>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script type="application/javascript" src="script/main.js"></script>
 
 </html>
